hydromel/tests/errors/sem-const-case-no-match.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# ERROR: Value did not match any choice
constant case3 = case 40 of
    10 => 1
    20 => 2
    30 => 3
